# teaming24

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agentanet_central/: .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml
agentanet_central/backend/: Dockerfile  __init__.py  run.py
agentanet_central/backend/app/: __init__.py  audit.py  auth.py  config.py  database.py  id_utils.py  main.py
agentanet_central/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agentanet_central/frontend/src/: App.tsx  index.css
agentanet_central/frontend/src/components/: AdminDashboard.tsx  Dashboard.tsx  LoginPage.tsx
agentanet_central/frontend/src/store/: adminStore.ts  authStore.ts
docs/: README.md  api.md  architecture.md  cli.md  configuration.md  getting-started.md  id-generation.md  network.md  openclaw.md  runtime.md  x402-payments.md
examples/: README.md  browser_automation_demo.py  crewai_openhands_demo.py  multi_agent_demo.py  sandbox_demo.py
scripts/: start_dev.sh
teaming24/agent/: __init__.py  an_router.py  context.py  core.py  crew_wrapper.py  events.py  factory.py  local_agent_pool.py  local_agent_router.py  routing_strategy.py  streaming.py  tool_policy.py  workflow_steps.py  workforce_pool.py
teaming24/agent/framework/: __init__.py  base.py  crewai_adapter.py
teaming24/agent/framework/native/: __init__.py  adapter.py  runner.py  runtime.py
teaming24/agent/skills/: __init__.py  loader.py  prompt.py  registry.py  types.py
teaming24/agent/skills/bundled/code-review/: SKILL.md
teaming24/agent/skills/bundled/debugging/: SKILL.md
teaming24/agent/skills/bundled/web-scraping/: SKILL.md
teaming24/agent/tools/: __init__.py  base.py  memory_tools.py  network_tools.py  openclaw_tools.py  openhands_tools.py  sandbox_tools.py
teaming24/agent/workers/: __init__.py  node_alpha.py  node_beta.py  node_delta.py  node_gamma.py
teaming24/api/: __init__.py  app.py  deps.py  errors.py  event_buffer.py  server.py  state.py
teaming24/api/routes/: __init__.py  config.py  db.py  gateway.py  health.py  openclaw.py  scheduler.py  wallet.py
teaming24/api/services/: __init__.py  agent_memory.py  approval.py  fallback_agents.py  task_progress.py  wallet.py
teaming24/benchmark/: __init__.py
teaming24/channels/: __init__.py  base.py  discord.py  manager.py  router.py  slack.py  telegram.py  webchat.py
teaming24/communication/: __init__.py  central_client.py  discovery.py  manager.py  subscription.py  websocket.py
teaming24/config/: __init__.py  identity.py  loader.py  teaming24.yaml  validation.py
teaming24/data/: __init__.py  agent_skill_mixin.py  database.py  schema.py  settings_mixin.py  task_chat_mixin.py
teaming24/events/: __init__.py  bridge.py  bus.py  types.py
teaming24/gateway/: __init__.py  gateway.py
teaming24/gui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
teaming24/gui/src/: App.tsx  index.css
teaming24/gui/src/api/: memory.ts
teaming24/gui/src/components/: AgentMemoryIndicator.tsx  ChatView.tsx  DocsView.tsx  EmptyState.tsx  ErrorDetailModal.tsx  MessageBubble.tsx  NetworkStatusSwitch.tsx  NotificationCenter.tsx  ResizeHandle.tsx  SandboxMonitor.tsx  SettingsDialog.tsx  Sidebar.tsx  ToastContainer.tsx  WalletButton.tsx
teaming24/gui/src/components/dashboard/: AddNodeDialog.tsx  AgentCard.tsx  AgentDetail.tsx  AgentEditorDialog.tsx  AgentEventBridge.tsx  ChannelsPanel.tsx  ConnectedNodesList.tsx  ConnectionHistory.tsx  CreateAgentDialog.tsx  CreateTaskDialog.tsx  Dashboard.tsx  GatewayPanel.tsx  InboundPeersList.tsx  LANNodesList.tsx  LogViewer.tsx  Marketplace.tsx  MarketplaceListingDialog.tsx  MemoryPanel.tsx  MessageFlow.tsx  NetworkControls.tsx  NetworkEventBridge.tsx  NetworkTopology.tsx  (+11 more)
teaming24/gui/src/config/: payment.ts
teaming24/gui/src/constants/: node.ts
teaming24/gui/src/store/: agentStore.ts  chatStore.ts  configStore.ts  dataStore.ts  networkStore.ts  notificationStore.ts  settingsStore.ts  skillStore.ts  uiStore.ts  walletStore.ts  wsStore.ts
teaming24/gui/src/types/: index.ts
teaming24/gui/src/utils/: api.ts  date.ts  debug.ts  errorReporting.ts  format.ts  ids.ts  statusConfig.ts  strings.ts  taskUndo.ts
teaming24/identity/: __init__.py
teaming24/llm/: __init__.py  model_resolver.py  provider.py
teaming24/memory/: __init__.py  contracts.py  manager.py  search.py  store.py  vector_store.py
teaming24/payment/: __init__.py
teaming24/payment/crypto/: __init__.py
teaming24/payment/crypto/x402/: __init__.py  _chains.py  _common.py  _local_types.py  facilitator.py  gate.py  merchant.py  protocol.py  types.py  wallet.py
teaming24/plugins/: __init__.py  hooks.py  openclaw_bridge.py  openclaw_plugin.py
teaming24/prompting/: __init__.py  registry.py
teaming24/runtime/: __init__.py  base.py  manager.py  task_context.py  types.py
teaming24/runtime/local/: __init__.py
teaming24/runtime/openhands/: __init__.py  adapter.py
teaming24/runtime/sandbox/: __init__.py  api.py  browser.py  client.py  docker.py  fs.py  health.py  interpreter.py  metrics.py  pool.py  process.py  shell.py  streaming.py
teaming24/scheduler/: __init__.py  service.py
teaming24/server/: __init__.py  cli.py
teaming24/session/: __init__.py  compaction.py  context.py  manager.py  store.py  types.py
teaming24/task/: __init__.py  manager.py  output.py
teaming24/utils/: __init__.py  format.py  ids.py  logger.py  paths.py  shared.py
tests/: conftest.py  test_agent_memory_service.py  test_an_router_robustness.py  test_api_app_export.py  test_channel_runtime_state.py  test_config_compatibility.py  test_config_loader.py  test_config_validation.py  test_database_consistency.py  test_discovery_payload.py  test_llm_model_resolver.py  test_memory_manager.py  test_native_framework_imports.py  test_network_search.py  test_prompt_registry.py  test_result_quality_gate.py  test_security_config_route.py  test_session_manager_history.py  test_task_progress_service.py
